Kubernetes/jmaze-k8s-cilium/observability/02_kube_prom/blackboxExporter-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: blackbox-exporter
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.28.0
  name: blackbox-exporter
  namespace: observability
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9115
      protocol: TCP
    - port: 19115
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: blackbox-exporter
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Egress
  - Ingress
